--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +10,80 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script
+      src="https://kit.fontawesome.com/0bd8544fc7.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Weather</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h1>Bogota</h1>
+          <h2>
+            <span id="temperature">13 </span>
+            <span id="units">ºC</span>
+          </h2>
+          <span id="weather-description">Rain</span>
+          <i class="fa-solid fa-cloud-moon-rain rain-moon-icon"></i>
+        </div>
+        <div class="col-6">
+          <div id="date">Sun, Jul 16 19:29</div>
+        </div>
+        <div class="details-weather">
+          <div>Humidity <span id="humidity">80</span>%</div>
+          <div>Pressure <span id="pressure">1018</span>Pa</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Mon</h5>
+              <i class="fa-solid fa-cloud-showers-heavy rain-icon"></i>
+              <p class="card-text">16º</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Tue</h5>
+              <i class="fa-solid fa-cloud-showers-heavy rain-icon"></i>
+              <p class="card-text">17º</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Wed</h5>
+              <i class="fa-solid fa-cloud-sun-rain sun-rain-icon"></i>
+              <p class="card-text">17º</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Thu</h5>
+              <i class="fa-solid fa-cloud cloud-icon"></i>
+              <p class="card-text">17º</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Fri</h5>
+              <i class="fa-solid fa-cloud cloud-icon"></i>
+              <p class="card-text">17º</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
   <script src="src/project.js"></script>
 </html>
