--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         </div>
       </div>
     </div>
+    <small>
+      <a href="https://github.com/Almart11/Weather-app" target="_blank"
+        >Coded by Aleima M</a
+      >
+    </small>
+    <script src="src/project.js"></script>
   </body>
-  <script src="src/project.js"></script>
 </html>
