Showing-current-weather

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script
       src="https://kit.fontawesome.com/0bd8544fc7.js"
       crossorigin="anonymous"
@@ -22,10 +23,10 @@
         <div class="col-6">
           <h1>Bogota</h1>
           <h2>
-            <span id="temperature">13 </span>
+            <span id="temperature"> </span>
             <span id="units">ºC</span>
           </h2>
-          <span id="weather-description">Rain</span>
+          <span id="weather-description"></span>
           <i class="fa-solid fa-cloud-moon-rain rain-moon-icon"></i>
         </div>
         <div class="col-6">
@@ -47,8 +48,8 @@
           </div>
         </div>
         <div class="details-weather">
-          <div>Humidity <span id="humidity">80</span>%</div>
-          <div>Pressure <span id="pressure">1018</span>Pa</div>
+          <div>Humidity <span id="humidity"> </span>%</div>
+          <div>Pressure <span id="pressure"> </span>Pa</div>
         </div>
       </div>
       <div class="row">
