--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <h1>Bogota</h1>
+          <h1></h1>
           <h2>
             <span id="temperature"> </span>
             <span id="units">ºC</span>
           </h2>
           <span id="weather-description"></span>
-          <i class="fa-solid fa-cloud-moon-rain rain-moon-icon"></i>
+          <img
+            src="https://openweathermap.org/img/wn/10d@2x.png"
+            alt="Clear"
+            id="icon"
+          />
         </div>
         <div class="col-6">
           <div class="weather">
@@ -44,7 +48,7 @@
                 <input type="submit" value="Search" />
               </div>
             </form>
-            <div id="date">Sun, Jul 16 19:29</div>
+            <div id="date"></div>
           </div>
         </div>
         <div class="details-weather">
