--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
             <span id="units">ºC</span>
           </h2>
           <span id="weather-description"></span>
-          <img
-            src="https://openweathermap.org/img/wn/10d@2x.png"
-            alt="Clear"
-            id="icon"
-          />
+          <img src="" alt="Clear" id="icon" />
         </div>
         <div class="col-6">
           <div class="weather">
