--- a/index.html
+++ b/index.html
@@ -52,53 +52,7 @@
           <div>Pressure <span id="pressure"> </span>Pa</div>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Mon</h5>
-              <i class="fa-solid fa-cloud-showers-heavy rain-icon"></i>
-              <p class="card-text">16º</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Tue</h5>
-              <i class="fa-solid fa-cloud-showers-heavy rain-icon"></i>
-              <p class="card-text">17º</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Wed</h5>
-              <i class="fa-solid fa-cloud-sun-rain sun-rain-icon"></i>
-              <p class="card-text">17º</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Thu</h5>
-              <i class="fa-solid fa-cloud cloud-icon"></i>
-              <p class="card-text">17º</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Fri</h5>
-              <i class="fa-solid fa-cloud cloud-icon"></i>
-              <p class="card-text">17º</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
     </div>
     <small>
       <a href="https://github.com/Almart11/Weather-project" target="_blank"
